hphp/hack/test/typecheck/const_attribute/class_const_attribute.php.exp
File "class_const_attribute.php", line 17, characters 12-26:
Cannot mutate a __Const property (Typing[4196])
